--- a/requirements.txt
+++ b/requirements.txt
@@ -7,15 +7,16 @@ cryptography==41.0.3
 Flask==2.3.3
 Flask-Cors==4.0.0
 Flask-JWT-Extended==4.5.2
+gunicorn==21.2.0
 h11==0.14.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+packaging==23.1
 psycopg2==2.9.7
 pycodestyle==2.11.0
 pycparser==2.21
 PyJWT==2.8.0
 python-decouple==3.8
 python-dotenv==1.0.0
-uvicorn==0.23.2
 Werkzeug==2.3.7
